# EmptyCppProject

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  EmptyCppProject.code-workspace
app/: CMakeLists.txt
app/src/: main.cpp
cmake/: sdl.cmake
core/: CMakeLists.txt
core/include/: core.h
core/src/: core.cpp
